--- a/.gitconfig
+++ b/.gitconfig
@@ -27,6 +27,7 @@
     dcw = diff --cached --color-words
     amend = commit --amend -C HEAD
     re = "!. ~/.githelpers && rebase_unpushed"
+	ctags = !.git/hooks/ctags
 [diff "tgz"]
 	textconv = tar zvtf
 [diff "docx"]
@@ -35,3 +36,5 @@
 	textconv = dump-xlsx.sh
 [diff]
 	tool = vimdiff
+[init]
+	templatedir = ~/.git_template
