--- a/.gitconfig
+++ b/.gitconfig
@@ -30,6 +30,7 @@
 	ctags = !.git/hooks/ctags
     save = !sh -c 'export PREV=$(git symbolic-ref HEAD|cut -d/ -f3-) && git checkout -b "$1" && git commit -anm\"Stashed: $1\" && git checkout "$PREV"' -
     cob  = "!. ~/.githelpers && checkout_selected_branch"
+    shows  = "!. ~/.githelpers && show_selected_revision"
 [diff "tgz"]
 	textconv = tar zvtf
 [diff "docx"]
