--- a/.gitmodules
+++ b/.gitmodules
@@ -21,7 +21,7 @@
 	url = git://github.com/vim-scripts/AnsiEsc.vim.git
 [submodule ".vim/bundle/snipmate"]
 	path = .vim/bundle/snipmate
-	url = https://github.com/msanders/snipmate.vim.git
+	url = https://github.com/kippr/snipmate.vim.git
 [submodule ".vim/bundle/syntastic"]
 	path = .vim/bundle/syntastic
 	url = https://github.com/scrooloose/syntastic.git
