--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule ".vim/bundle/syntastic"]
 	path = .vim/bundle/syntastic
 	url = https://github.com/scrooloose/syntastic.git
+[submodule ".vim/bundle/vim-pep8-indent"]
+	path = .vim/bundle/vim-pep8-indent
+	url = https://github.com/hynek/vim-python-pep8-indent.git
