--- a/.gitconfig
+++ b/.gitconfig
@@ -31,6 +31,7 @@
     save = !sh -c 'export PREV=$(git symbolic-ref HEAD|cut -d/ -f3-) && git checkout -b "$1" && git commit -anm\"Stashed: $1\" && git checkout "$PREV"' -
     cob  = "!. ~/.githelpers && checkout_selected_branch"
     shows  = "!. ~/.githelpers && show_selected_revision"
+    files = diff-tree --no-commit-id --name-only -r
 [diff "tgz"]
 	textconv = tar zvtf
 [diff "docx"]
