--- a/.gitconfig
+++ b/.gitconfig
@@ -21,9 +21,9 @@
     r  = "!git l -30"
 	ll = log --stat --graph --decorate --all
 	h  = log --stat --decorate -1
-	di = diff
+	di = diff --ignore-space-at-eol
     diw = diff --color-words
-	dc = diff --cached
+	dc = diff --cached --ignore-space-at-eol
     dcw = diff --cached --color-words
     amend = commit --amend -C HEAD
     re = "!. ~/.githelpers && rebase_unpushed"
