--- a/.grconfig.json
+++ b/.grconfig.json
@@ -22,6 +22,7 @@
       "/Users/kip/ac/Bookshelf",
       "/Users/kip/ac/CreditIntegration",
       "/Users/kip/ac/CreditMon",
+      "/Users/kip/ac/CreditQB",
       "/Users/kip/ac/Dojo",
       "/Users/kip/ac/FeedDaemon",
       "/Users/kip/ac/HeronFitout",
@@ -52,6 +53,7 @@
       "/Users/kip/ac/BloombergBridge",
       "/Users/kip/ac/CreditIntegration",
       "/Users/kip/ac/CreditMon",
+      "/Users/kip/ac/CreditQB",
       "/Users/kip/ac/FeedDaemon",
       "/Users/kip/ac/InvestorPortalStaging",
       "/Users/kip/ac/MIS",
@@ -71,6 +73,7 @@
     "w": [
       "/Users/kip/ac/Batch",
       "/Users/kip/ac/CreditMon",
+      "/Users/kip/ac/CreditQB",
       "/Users/kip/ac/FeedDaemon",
       "/Users/kip/ac/MIS",
       "/Users/kip/ac/Management",
