--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,3 +7,15 @@ bind-key -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -
 
 set-option -g default-command "reattach-to-user-namespace -l zsh"
 set -g history-limit 10000
+
+#https://robots.thoughtbot.com/tmux-copy-paste-on-os-x-a-better-future
+# Use vim keybindings in copy mode
+setw -g mode-keys vi
+
+# Setup 'v' to begin selection as in Vim
+bind-key -t vi-copy v begin-selection
+bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+
+# Update default binding of `Enter` to also use copy-pipe
+unbind -t vi-copy Enter
+bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
