Use ctrl-a rather than ctrl-b for tmux... this could be painful for a while

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,6 +8,9 @@ bind-key -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -
 set-option -g default-command "reattach-to-user-namespace -l zsh"
 set -g history-limit 10000
 
+# use ctrl a instead so i can stick with ctrl b on remote clients
+set -g prefix C-a
+
 #https://robots.thoughtbot.com/tmux-copy-paste-on-os-x-a-better-future
 
 # Use vim keybindings in copy mode
