Everest version control, there at last

--- a/.grconfig.json
+++ b/.grconfig.json
@@ -4,6 +4,7 @@
       "/Users/kip/ac/Batch",
       "/Users/kip/ac/CreditMon",
       "/Users/kip/ac/CreditQB",
+      "/Users/kip/ac/Everest",
       "/Users/kip/ac/Management",
       "/Users/kip/ac/marvin",
       "/Users/kip/ac/slrp",
