Care about prospero now

--- a/.grconfig.json
+++ b/.grconfig.json
@@ -5,6 +5,7 @@
       "/Users/kip/ac/CreditMon",
       "/Users/kip/ac/CreditQB",
       "/Users/kip/ac/Everest",
+      "/Users/kip/ac/prospero",
       "/Users/kip/ac/Management",
       "/Users/kip/ac/marvin",
       "/Users/kip/ac/slrp",
