--- a/.grconfig.json
+++ b/.grconfig.json
@@ -10,6 +10,7 @@
       "/Users/kip/ac/marvin",
       "/Users/kip/ac/slrp",
       "/Users/kip/ac/pwm",
+      "/Users/kip/ac/prospero",
       "/Users/kip/Personal",
       "/Users/kip/Weldam",
       "/Users/kip/admin",
