Syphon matter too

--- a/.grconfig.json
+++ b/.grconfig.json
@@ -9,6 +9,7 @@
       "/Users/kip/ac/Management",
       "/Users/kip/ac/marvin",
       "/Users/kip/ac/slrp",
+      "/Users/kip/ac/syphon",
       "/Users/kip/ac/pwm",
       "/Users/kip/code/alertscope",
       "/Users/kip/Personal",
