Vimwiki leader-w was clashing with my vsplit shortcut

--- a/.gitmodules
+++ b/.gitmodules
@@ -36,7 +36,7 @@
 	url = https://github.com/vim-scripts/CountJump.git
 [submodule "vim/bundle/vimwiki"]
 	path = vim/bundle/vimwiki
-	url = https://github.com/vimwiki/vimwiki.git
+	url = git@github.com:kippr/vimwiki.git
 [submodule ".vim/bundle/vimwiki"]
 	path = .vim/bundle/vimwiki
 	url = https://github.com/vimwiki/vimwiki.git
