--- a/.tmux.conf
+++ b/.tmux.conf
@@ -17,13 +17,13 @@ set -g prefix C-a
 setw -g mode-keys vi
 
 # Setup 'v' to begin selection as in Vim
-#bind-key -T copy-mode-vi v send-keys -X begin-selection
-#bind-key -T copy-mode-vi  y send-keys -X copy-pipe "reattach-to-user-namespace pbcopy"
-#bind-key -Tcopy-mode-vi 'v' send -X begin-selection
-#bind-key -Tcopy-mode-vi 'y' send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi  y send-keys -X copy-pipe "reattach-to-user-namespace pbcopy"
+bind-key -Tcopy-mode-vi 'v' send -X begin-selection
+bind-key -Tcopy-mode-vi 'y' send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 
 # Update default binding of `Enter` to also use copy-pipe
-#unbind -T copy-mode-vi Enter
-#bind-key -T copy-mode-vi Enter send-keys -X copy-pipe "reattach-to-user-namespace pbcopy"
-#unbind -Tcopy-mode-vi Enter
-#bind-key -Tcopy-mode-vi Enter send-keys -X copy-pipe "reattach-to-user-namespace pbcopy"
+unbind -T copy-mode-vi Enter
+bind-key -T copy-mode-vi Enter send-keys -X copy-pipe "reattach-to-user-namespace pbcopy"
+unbind -Tcopy-mode-vi Enter
+bind-key -Tcopy-mode-vi Enter send-keys -X copy-pipe "reattach-to-user-namespace pbcopy"
