Fix for nvim etc

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -21,8 +21,21 @@ bind-key -T copy-mode-vi Enter send-keys -X copy-pipe "reattach-to-user-namespac
 unbind -Tcopy-mode-vi Enter
 bind-key -Tcopy-mode-vi Enter send-keys -X copy-pipe "reattach-to-user-namespace pbcopy"
 
-bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim$' && tmux send-keys C-h) || tmux select-pane -L"
-bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim$' && tmux send-keys C-j) || tmux select-pane -D"
-bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim$' && tmux send-keys C-k) || tmux select-pane -U"
-bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim$' && tmux send-keys C-l) || tmux select-pane -R"
+#bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim$' && tmux send-keys C-h) || tmux select-pane -L"
+#bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim$' && tmux send-keys C-j) || tmux select-pane -D"
+#bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim$' && tmux send-keys C-k) || tmux select-pane -U"
+#bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim$' && tmux send-keys C-l) || tmux select-pane -R"
+
+# not sure what this is, but was giving error:
 #bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim$' && tmux send-keys 'C-\\') || tmux select-pane -l"
+
+## more sophisticated but also hackier look for vim processes, e.g. in git difftool.
+## also handle vim *& nvim*
+## look for nvim or vim anywhere in the process tree running in this panel.. -w is word boundary.. so /bin/vim also matches
+bind -n C-h run "(pstree -p '#{pane_pid}' | grep -iEqw 'n?vim' && tmux send-keys C-h) || tmux select-pane -L"
+bind -n C-j run "(pstree -p '#{pane_pid}' | grep -iEqw 'n?vim' && tmux send-keys C-j) || tmux select-pane -D"
+bind -n C-k run "(pstree -p '#{pane_pid}' | grep -iEqw 'n?vim' && tmux send-keys C-k) || tmux select-pane -U"
+bind -n C-l run "(pstree -p '#{pane_pid}' | grep -iEqw 'n?vim' && tmux send-keys C-l) || tmux select-pane -R"
+## enable for debugging, so you can cat /tmp/meh into various grep filters
+#bind -n C-d run "pstree -p '#{pane_pid}' > /tmp/meh "
+#bind -n C-d run "tmux send-keys C-h"
