--- a/.tmux.conf
+++ b/.tmux.conf
@@ -21,21 +21,29 @@ bind-key -T copy-mode-vi Enter send-keys -X copy-pipe "reattach-to-user-namespac
 unbind -Tcopy-mode-vi Enter
 bind-key -Tcopy-mode-vi Enter send-keys -X copy-pipe "reattach-to-user-namespace pbcopy"
 
+
+## more sophisticated but also much hackier that looks for vim processes in current tree of processes in pane, e.g. in git difftool.
+## also handle vim *& nvim*
+## this grabs the process tree then greps out any stopped processes via inline ps filter and finally puts the unfiltered list through a vim/nvim check
+is_vim="pstree -p '#{pane_pid}' | grep -v -E \"$(ps -eo state,pid | awk '/T/ { print $2 }' | paste -sd '|' -)\" | grep -qEw 'n?vim'"
+bind -n C-h if-shell "$is_vim" 'send-keys C-h' 'select-pane -L'
+bind -n C-j if-shell "$is_vim" 'send-keys C-j' 'select-pane -D'
+bind -n C-k if-shell "$is_vim" 'send-keys C-k' 'select-pane -U'
+bind -n C-l if-shell "$is_vim" 'send-keys C-l' 'select-pane -R'
+
+## prior version that didn't filter out stopped processes
+#bind -n C-l run "(pstree -p '#{pane_pid}' | grep -iEqw 'n?vim' && tmux send-keys C-l) || tmux select-pane -R"
+
+## prior prior version that worked for vim but not other things like git difftool or nvim
 #bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim$' && tmux send-keys C-h) || tmux select-pane -L"
-#bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim$' && tmux send-keys C-j) || tmux select-pane -D"
-#bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim$' && tmux send-keys C-k) || tmux select-pane -U"
-#bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim$' && tmux send-keys C-l) || tmux select-pane -R"
 
 # not sure what this is, but was giving error:
 #bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim$' && tmux send-keys 'C-\\') || tmux select-pane -l"
 
-## more sophisticated but also hackier look for vim processes, e.g. in git difftool.
-## also handle vim *& nvim*
-## look for nvim or vim anywhere in the process tree running in this panel.. -w is word boundary.. so /bin/vim also matches
-bind -n C-h run "(pstree -p '#{pane_pid}' | grep -iEqw 'n?vim' && tmux send-keys C-h) || tmux select-pane -L"
-bind -n C-j run "(pstree -p '#{pane_pid}' | grep -iEqw 'n?vim' && tmux send-keys C-j) || tmux select-pane -D"
-bind -n C-k run "(pstree -p '#{pane_pid}' | grep -iEqw 'n?vim' && tmux send-keys C-k) || tmux select-pane -U"
-bind -n C-l run "(pstree -p '#{pane_pid}' | grep -iEqw 'n?vim' && tmux send-keys C-l) || tmux select-pane -R"
-## enable for debugging, so you can cat /tmp/meh into various grep filters
-#bind -n C-d run "pstree -p '#{pane_pid}' > /tmp/meh "
+## various debugging commands, so you can cat /tmp/meh into various grep filters
+#bind -n C-d run "tmux display-message -p '#{pane_current_command}' > /tmp/meh "
+#bind -n C-d run "ps -o pid,command -p '#{pane_pid}' > /tmp/meh "
+#bind -n C-d run "ps -f -p #{pane_pid} > /tmp/meh "
 #bind -n C-d run "tmux send-keys C-h"
+#bind -n C-d run "pstree -p '#{pane_pid}' | grep -v -E \"$(ps -eo state,pid | awk '/T/ { print $2 }' | paste -sd '|' -)\" > /tmp/meh"
+
