Why wouldn't you always want this?

--- a/.gitconfig
+++ b/.gitconfig
@@ -56,6 +56,7 @@
 	push = HEAD
 [push]
     default = current
+	autoSetupRemote = true
 [init]
 	templatedir = ~/.git_template
 [branch "*branch-name*"]
