--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,4 @@
-set-option -g default-command "reattach-to-user-namespace -l zsh"
+#set-option -g default-command "reattach-to-user-namespace -l zsh"
 set -g history-limit 10000
 
 # use ctrl a instead so i can stick with ctrl b on remote clients
@@ -11,21 +11,23 @@ setw -g mode-keys vi
 
 # Setup 'v' to begin selection as in Vim
 bind-key -T copy-mode-vi v send-keys -X begin-selection
-bind-key -T copy-mode-vi  y send-keys -X copy-pipe "reattach-to-user-namespace pbcopy"
+#bind-key -T copy-mode-vi  y send-keys -X copy-pipe "reattach-to-user-namespace pbcopy"
 bind-key -Tcopy-mode-vi 'v' send -X begin-selection
-bind-key -Tcopy-mode-vi 'y' send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+#bind-key -Tcopy-mode-vi 'y' send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 
 # Update default binding of `Enter` to also use copy-pipe
 unbind -T copy-mode-vi Enter
-bind-key -T copy-mode-vi Enter send-keys -X copy-pipe "reattach-to-user-namespace pbcopy"
-unbind -Tcopy-mode-vi Enter
-bind-key -Tcopy-mode-vi Enter send-keys -X copy-pipe "reattach-to-user-namespace pbcopy"
+bind-key -T copy-mode-vi Enter send-keys -X copy-pipe "pbcopy"
+#bind-key -T copy-mode-vi Enter send-keys -X copy-pipe "reattach-to-user-namespace pbcopy"
+#unbind -Tcopy-mode-vi Enter
+#bind-key -Tcopy-mode-vi Enter send-keys -X copy-pipe "reattach-to-user-namespace pbcopy"
 
 
 ## more sophisticated but also much hackier that looks for vim processes in current tree of processes in pane, e.g. in git difftool.
 ## also handle vim *& nvim*
 ## this grabs the process tree then greps out any stopped processes via inline ps filter and finally puts the unfiltered list through a vim/nvim check
-is_vim="pstree -p '#{pane_pid}' | grep -v -E \"$(ps -eo state,pid | awk '/T/ { print $2 }' | paste -sd '|' -)\" | grep -qEw 'n?vim'"
+# embed is a running subprocess nvim uses
+is_vim="pstree -p '#{pane_pid}' | grep -v -E \"$(ps -eo state,pid | awk '/T/ { print $2 }' | paste -sd '|' -)\" | grep -v 'nvim --embed'| grep -qE ' n?vim'"
 bind -n C-h if-shell "$is_vim" 'send-keys C-h' 'select-pane -L'
 bind -n C-j if-shell "$is_vim" 'send-keys C-j' 'select-pane -D'
 bind -n C-k if-shell "$is_vim" 'send-keys C-k' 'select-pane -U'
