--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,4 +1,7 @@
 # vim:fileencoding=utf-8:foldmethod=marker
+include ~/.config/kitty/theme.conf
+
+enable_true_color yes
 
 #: Fonts {{{
 
@@ -20,7 +23,7 @@
 #: <https://sw.kovidgoyal.net/kitty/kittens/choose-fonts/#font-spec-
 #: syntax>.
 
-# font_size 11.0
+font_size 12.0
 
 #: Font size (in pts).
 
@@ -2711,3 +2714,12 @@
 #: }}}
 
 #: }}}
+#
+
+
+# BEGIN_KITTY_FONTS
+font_family      family="Source Code Pro"
+bold_font        auto
+italic_font      auto
+bold_italic_font auto
+# END_KITTY_FONTS
